crates/macros/tests/stage/fail/shader_missing.stderr
error: Missing required shader "test/does_not_exist", tried:
         $DIR/assets/shaders/test/does_not_exist.spv
 --> tests/stage/fail/shader_missing.rs:7:1
  |
7 | struct BadStage {}
  | ^^^^^^^^^^^^^^^^^^
